{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "8cf26820-8c75-4bab-8482-f5024042bb5c",
            "actions": [
                {
                    "name": "ExitToMenu",
                    "type": "Button",
                    "id": "e0f6edc1-cce0-4710-8caa-f8a2c58d6f26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "dc7609a5-d8a1-4b54-8015-9222ebae58fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "Zoom",
                    "type": "Button",
                    "id": "9a4a1fc8-b666-4836-b1fe-d05789582c22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "PassThrough",
                    "id": "6b587c53-4030-4a45-a440-e79ba5662814",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartPos",
                    "type": "PassThrough",
                    "id": "7fd438d4-8a0c-4f98-b1ca-5959284b0ff1",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.25,y=0.25)",
                    "interactions": ""
                },
                {
                    "name": "AimButton",
                    "type": "Button",
                    "id": "55e5b041-92d4-43f7-9362-c4cd468f0a36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CancelAim",
                    "type": "Button",
                    "id": "2516901d-80c5-4222-97b1-a39aaffb51bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6c75d5c-cfd6-4f7c-8819-d1d9d08e2e4d",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitToMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2301ef69-c89e-4b35-9c80-0379e393cafb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitToMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98e8d2ff-1ed0-4ad1-b475-b546cebef847",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ada9604b-71af-4db9-bc59-5a278b7c5453",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fa751ef-8bf4-4a0c-8e66-c92911e8db56",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9eed935d-6397-4015-9370-08ed016d7f7c",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fd3ba89-b97e-4fb7-a31e-b9b990f89043",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e405a46-d17d-4234-8e0a-25a29a838f6c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72b88c2b-e622-484d-8c46-e2b706f026cd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d778effe-fda5-4727-8557-f866f7716d17",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65c5f48e-c745-4fd0-a119-8e206945d4bf",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "ScaleVector2",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebcc2f3b-18c3-4693-92ee-5e64484de3cb",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "b5ad4040-1f7a-4418-bfc9-0385b155fd9e",
            "actions": [
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "9984aec6-724e-495e-b77b-0a3f871fb9fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2ff3821d-280a-4691-a546-5ad6e0a8588b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e014d873-502d-45b7-90c0-eca745c5ae3c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}